--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,10 +77,16 @@ android {
 
     signingConfigs {
         release {
-            storeFile file(System.getenv("ANDROID_STORE_FILE") ?: localProperties['storeFile'])
-            storePassword System.getenv("ANDROID_STORE_PASSWORD") ?: localProperties['storePassword']
-            keyAlias System.getenv("ANDROID_KEY_ALIAS") ?: localProperties['keyAlias']
-            keyPassword System.getenv("ANDROID_KEY_PASSWORD") ?: localProperties['keyPassword']
+            def storeFilePath = System.getenv("ANDROID_STORE_FILE") ?: localProperties.getProperty('storeFile')
+            if (storeFilePath) {
+                storeFile file(storeFilePath)
+                storePassword System.getenv("ANDROID_STORE_PASSWORD") ?: localProperties.getProperty('storePassword')
+                keyAlias System.getenv("ANDROID_KEY_ALIAS") ?: localProperties.getProperty('keyAlias')
+                keyPassword System.getenv("ANDROID_KEY_PASSWORD") ?: localProperties.getProperty('keyPassword')
+            } else {
+                println "Warning: No signing config specified. Using debug signing config."
+                signingConfig signingConfigs.debug
+            }
         }
     }
     buildTypes {
