--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,10 +78,13 @@ android {
     signingConfigs {
         debug {}
         release {
-            storeFile file(System.getenv("ANDROID_STORE_FILE") ?: localProperties['storeFile'])
-            storePassword System.getenv("ANDROID_STORE_PASSWORD") ?: localProperties['storePassword']
-            keyAlias System.getenv("ANDROID_KEY_ALIAS") ?: localProperties['keyAlias']
-            keyPassword System.getenv("ANDROID_KEY_PASSWORD") ?: localProperties['keyPassword']
+            def storeFilePath = System.getenv("ANDROID_STORE_FILE") ?: localProperties['storeFile']
+            if (storeFilePath != null || storeFilePath.isNotEmpty()) {
+                storeFile file(storeFilePath)
+                storePassword System.getenv("ANDROID_STORE_PASSWORD") ?: localProperties['storePassword']
+                keyAlias System.getenv("ANDROID_KEY_ALIAS") ?: localProperties['keyAlias']
+                keyPassword System.getenv("ANDROID_KEY_PASSWORD") ?: localProperties['keyPassword']
+            }
         }
     }
     buildTypes {
