--- a/.github/workflows/android_distribution_prod.yaml
+++ b/.github/workflows/android_distribution_prod.yaml
@@ -62,6 +62,7 @@ jobs:
       - name: Deploy do Firebase
         run: |
           ls -la build/app/outputs/flutter-apk
+          firebase projects:list --token "$FIREBASE_TOKEN"
           cd android
           bundle exec fastlane firebase_prod
         env:
