--- a/.github/workflows/android_distribution_prod_local.yaml
+++ b/.github/workflows/android_distribution_prod_local.yaml
@@ -32,6 +32,7 @@ jobs:
       - name: Deploy do firebase
         run: |
           ls -la build/app/outputs/flutter-apk
+          firebase projects:list --token "$FIREBASE_TOKEN"
           cd android
           bundle exec fastlane firebase_prod
         env:
