--- a/.github/workflows/android_distribution_prod.yaml
+++ b/.github/workflows/android_distribution_prod.yaml
@@ -46,20 +46,15 @@ jobs:
           channel: 'stable'
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build projeto
+      - name: Setup flutter e builda projeto
         run: |
           flutter clean
           flutter pub get
           ./localization
           flutter packages pub run build_runner build --delete-conflicting-outputs
           flutter build apk --debug --flavor prod -t lib/core/flavors/main_prod.dart
-        env:
-          ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
-          ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
-          ANDROID_STORE_PASSWORD: ${{ secrets.ANDROID_STORE_PASSWORD }}
-          ANDROID_STORE_FILE: /tmp/KeyStorePlay.keystore
 
-      - name: Deploy do Firebase
+      - name: Deploy do firebase
         run: |
           ls -la build/app/outputs/flutter-apk
           firebase projects:list --token "$FIREBASE_TOKEN"
