--- a/.github/workflows/android_distribution_prod.yaml
+++ b/.github/workflows/android_distribution_prod.yaml
@@ -19,7 +19,8 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '2.7'
+          ruby-version: '3.3'
+          bundler-cache: true
 
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
