--- a/.github/workflows/android_distribution_store.yaml
+++ b/.github/workflows/android_distribution_store.yaml
@@ -32,6 +32,7 @@ jobs:
       - name: Setup Fastlane
         run: |
           cd android
+          echo "gem 'ostruct'" >> Gemfile
           gem install bundler:2.4.19
           bundle install
 
