--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   manage_calendar_events: ^2.0.3
   add_2_calendar: ^3.0.1
   youtube_player_flutter: ^8.0.0
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
