--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   add_2_calendar: ^3.0.1
   youtube_player_flutter: ^8.0.0
   table_calendar: ^3.1.2
+  flutter_image_compress: ^2.3.0
 
 dev_dependencies:
   flutter_test:
