adiciona o google service json no android/app

--- a/.github/workflows/android_distribution_dev.yaml
+++ b/.github/workflows/android_distribution_dev.yaml
@@ -55,7 +55,7 @@ jobs:
           flutter pub get
           ./localization
           flutter packages pub run build_runner build --delete-conflicting-outputs
-          flutter build apk --debug --flavor dev -t lib/core/flavors/main_dev.dart
+          flutter build apk --debug --flavor dev -t lib/core/flavors/main_dev.dart -v
 
       - name: Deploy do Firebase
         run: |
