--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   youtube_player_flutter: ^8.0.0
   table_calendar: ^3.1.2
   flutter_image_compress: ^2.3.0
+  datepicker_dropdown: ^0.1.5
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
