--- a/.github/workflows/android_distribution_dev.yaml
+++ b/.github/workflows/android_distribution_dev.yaml
@@ -51,7 +51,8 @@ jobs:
 
       - name: Build projeto
         run: |
-          ls -la android/app/src/dev/
+          cd android
+          ./gradlew signingReport
           flutter clean
           flutter pub get
           ./localization
