ajustando workflow de deploy local para as lojas

--- a/.github/workflows/android_distribution_store_local.yaml
+++ b/.github/workflows/android_distribution_store_local.yaml
@@ -34,7 +34,9 @@ jobs:
           echo "JAVA_HOME is set to $JAVA_HOME"
 
       - name: Build with Gradle
-        run: ./gradlew bundleStoreRelease --info
+        run: |
+          cd android
+          ./gradlew bundleStoreRelease --info
         env:
           JAVA_HOME: ${{ env.JAVA_HOME }}
 
