--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   flutter_image_compress: ^2.3.0
   datepicker_dropdown: ^0.1.5
   dropdown_button2: ^2.3.9
+  social_share: ^2.3.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
