--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,7 +81,12 @@ android {
     }
 
     signingConfigs {
-        debug {}
+        debug {
+            storeFile file('../../../../.android/debug.keystore')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+        }
         release {
             def storeFilePath = System.getenv("ANDROID_STORE_FILE") ?: localProperties['storeFile']
             if (storeFilePath != null && !storeFilePath.isEmpty()) {
