adiciona a lib para deixar o aplicativo sempre ligado

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -106,3 +106,7 @@ android {
 flutter {
     source '../..'
 }
+
+dependencies {
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+}
