--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,5 @@
 org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
-org.gradle.java.home=/Library/Java/JavaVirtualMachines/liberica-jdk-11.jdk/Contents/Home
+#org.gradle.java.home=/Library/Java/JavaVirtualMachines/liberica-jdk-11.jdk/Contents/Home
+org.gradle.java.home=/opt/homebrew/opt/openjdk@17
