--- a/android/Gemfile
+++ b/android/Gemfile
@@ -1,5 +1,8 @@
 source "https://rubygems.org"
 
+gem 'logger'
+gem 'mutex_m'
+gem 'abbrev'
 gem "fastlane"
 
 plugins_path = File.join(File.dirname(__FILE__), 'fastlane', 'Pluginfile')
