--- a/.github/workflows/ios_distribution_store_local.yaml
+++ b/.github/workflows/ios_distribution_store_local.yaml
@@ -1,4 +1,4 @@
-name: iOS distribution Store
+name: iOS distribution Store LOCAL
 
 on:
   workflow_dispatch:
@@ -15,6 +15,12 @@ jobs:
     steps:
       - name: Efetua checkout da branch
         uses: actions/checkout@v3
+
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.4'
+          bundler-cache: true
 
       - name: Setup Fastlane
         run: |
