adiciona configuração no build.gradle do android

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -102,6 +102,9 @@ android {
         release {
             signingConfig signingConfigs.release
         }
+        storeRelease {
+            signingConfig signingConfigs.release
+        }
     }
 }
 
